# Habits_drf

./: README.md  django  docker-compose.yml  env.sample  pyproject.toml  requirements.txt
config/: celery.py  settings.py  urls.py
data/cache/: dump.rdb
habits/: admin.py  models.py  pagination.py  services.py  tasks.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_habit_reward.py  0003_remove_habit_next_action_alter_habit_interval.py  0004_alter_habit_interval.py  0004_relatedhabit_is_nice.py  0005_alter_habit_options_alter_relatedhabit_options.py  0005_alter_habit_options_alter_relatedhabit_options_and_more.py  0006_alter_relatedhabit_habit.py  0007_alter_relatedhabit_habit.py  0008_alter_relatedhabit_habit.py
habits/models/: __init__.py  habit.py  realted_habit.py
habits/serializers/: __init__.py  habit_create_serializers.py  habit_serializers.py  related_habit_serializers.py
habits/tests/: __init__.py  habits_tests.py  related_habits_tests.py
habits/views/: __init__.py  habits_views.py  related_habits_views.py
users/: manager.py  models.py  permissions.py  serializers.py  sevices.py  tasks.py  urls.py  views.py
users/management/commands/: create_user.py
users/migrations/: 0001_initial.py
users/tests/: __init__.py  some_tests.py  tests.py
