[tool.poetry]
name = "habits-drf"
version = "0.1.0"
description = ""
authors = ["alexandr <dmitrymaslov2016@mai.ru>"]
readme = "README.md"
packages = [{include = "habits_drf"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
djangorestframework = "^3.14.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"
djangorestframework-simplejwt = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
